@@ -205,7 +205,7 @@ then
   fi
 fi
 
-if [ "$1" != abort-upgrade ] && [ "`uname -s`" = Linux ]
+if [ "$1" != abort-upgrade ]
 then
     # glibc kernel version check: KERNEL_VERSION_CHECK
 fi
